attempt from home. Final commit

--- a/index.html
+++ b/index.html
@@ -67,63 +67,64 @@
     <!-- Footer Start -->
 
     <div class="card text-bg-primary mb-3 footer" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Seattle</div>
         <div class="card-body">
-          <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore nemo expedita accusamus aliquam sunt explicabo beatae incidunt ad dolor iusto.</p>
         </div>
       </div>
       <div class="card text-bg-secondary mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Tacoma</div>
         <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, voluptatum quam velit ducimus labore doloribus tempora est corporis? Soluta, inventore!</p>
         </div>
       </div>
       <div class="card text-bg-success mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Kent</div>
         <div class="card-body">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab reiciendis eveniet asperiores deleniti dicta. Suscipit modi beatae repudiandae necessitatibus aliquam.</p>
         </div>
       </div>
       <div class="card text-bg-danger mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Covington</div>
         <div class="card-body">
-          <h5 class="card-title">Danger card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In et voluptatibus necessitatibus. Rem doloremque recusandae illum nostrum porro explicabo velit!</p>
         </div>
       </div>
       <div class="card text-bg-warning mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Auburn</div>
         <div class="card-body">
-          <h5 class="card-title">Warning card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo laudantium quo non enim mollitia perspiciatis atque totam provident qui alias.</p>
         </div>
       </div>
       <div class="card text-bg-info mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Renton</div>
         <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla architecto explicabo neque ipsam nesciunt facilis? Magni blanditiis cum nemo.</p>
         </div>
       </div>
       <div class="card text-bg-light mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Tukwilla</div>
         <div class="card-body">
-          <h5 class="card-title">Light card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia temporibus quo nesciunt obcaecati perspiciatis quis facere vero voluptatum optio natus?</p>
         </div>
       </div>
       <div class="card text-bg-dark mb-3" style="max-width: auto;">
-        <div class="card-header">Header</div>
+        <div class="card-header">Des Moines</div>
         <div class="card-body">
-          <h5 class="card-title">Dark card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">City</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi fuga reiciendis laudantium sint minus, totam neque eligendi. Voluptas, ea ad?</p>
         </div>
       </div>
 
     <!-- Footer End -->
+
     <!-- Bootstrap Script: KEEP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Bootstrap Script: KEEP -->
